# minflux-viewer

./: .gitattributes  .gitignore  .rfull.xml  CHANGELOG.md  INSTALL_MSR.md  LICENSE  README.md  UI_DESIGNER.md  minflux_viewer.spec  pyproject.toml  run_app.py
minflux_viewer/: __init__.py  __main__.py  scripting.py
minflux_viewer/analysis/: __init__.py  aggregation.py  conv_segmentation.py  conv_segmentation_3d.py  curvilinear_segmentation.py  dcr_em.py  drift_correction.py  geometry.py  hlyb_clustering.py  local_density.py  localization_precision.py  method_text.py  npc_geomfit.py  npc_segmentation.py  npc_wanlu.py  particle_average.py  particle_fusion.py  plot_profile.py  straightened_volume.py  trace_analysis.py
minflux_viewer/core/: __init__.py  app_state.py  attributes.py  channel_flatten.py  dataset.py  dataset_kind.py  filter_io.py  format_sniff.py  iteration.py  loader.py  magnetic_snap.py  mfx_sequence.py  min_enclosing.py  obf_image_source.py  overlay.py  particle_extract.py  particle_set.py  processing_journal.py  roi.py  roi_3d.py  roi_convert.py  roi_crop.py  roi_depth.py  roi_selection.py  roi_vertex_edit.py  sample_presets.py  save.py  self_update.py  simulate.py  spatial_grid.py  spreadsheet_loader.py  tiff_export.py  tiff_source.py  updater.py  volume_render.py
minflux_viewer/msr/: __init__.py  alignment.py  cli.py  descriptions.py  export.py  io.py  legacy_mbm.py  main_parser.py  mfxdta.py  msr_parser.py  msr_test_parser.py  obf_compat.py  parser_model.py  parser_utils.py  state.py  test_msr_parser.py  utils.py  writer.py
minflux_viewer/plugins/: __init__.py
minflux_viewer/plugins/data_simulator/: __init__.py
minflux_viewer/plugins/drift_correction/: __init__.py  drift_correction_window.py
minflux_viewer/plugins/generate_method_text/: __init__.py
minflux_viewer/plugins/msr_reader/: __init__.py  beads_drift.py  beads_drift_dialog.py  dialog.py  msr_reader_dialog.py
minflux_viewer/plugins/paraview/: __init__.py
minflux_viewer/plugins/script_editor/: __init__.py
minflux_viewer/plugins/trace_viewer/: __init__.py  trace_data.py  trace_viewer_window.py
minflux_viewer/ui/: __init__.py  attribute_3d_matplotlib_window.py  attribute_window.py  brightness_contrast_dialog.py  channel_combine_dialog.py  channel_separation_window.py  command_finder.py  command_meta.py  console_window.py  conv_segmentation_3d_dialog.py  conv_segmentation_dialog.py  crop_dialog.py  curvilinear_segmentation_dialog.py  data_simulator_window.py  data_window.py  dataset_manager.py  filter_dialog.py  histogram_window.py  hlyb_clustering_dialog.py  layer_brightness.py  log_window.py  lut_dialog.py  main_window.py  memory_monitor.py  modeless.py  msr_import_dialog.py  npc_segmentation_dialog.py  npc_wanlu_dialogs.py  particle_average_dialog.py  particle_inspector.py  plot_format.py  plot_profile_dialog.py  preferences_dialog.py  render_config.py  render_scheduler.py  render_window.py  roi_3d_dialog.py  roi_convert_dialog.py  roi_manager.py  roi_overlay.py  (+16 more)
minflux_viewer/utils/: __init__.py  filters.py  paraview_export.py  paraview_launcher.py
resources/samples/: interactive_render_MINFLUX.m  {dataset_name}_example_filter_file.json
resources/ui/: data_window.ui  dataset_manager.ui  filter_dialog.ui  main_window.ui
tests/: conftest.py  reproduce_paraflux_plot.m  test_aggregation.py  test_angle_roi.py  test_beads_drift.py  test_brightness_contrast_close.py  test_brightness_contrast_overlay.py  test_canonical_components.py  test_channel_flatten.py  test_close_all_windows.py  test_command_finder.py  test_conv_segmentation.py  test_conv_segmentation_3d.py  test_curvilinear_segmentation.py  test_dataset.py  test_dataset_kind.py  test_dcr_em.py  test_drift_correction.py  test_drift_correction_window.py  test_effective_iteration.py  test_effective_iteration_values.py  test_format_sniff.py  test_hlyb_clustering.py  test_hlyb_result_window.py  test_image_source.py  test_iteration_browsing.py  test_json_loader.py  test_layer_brightness.py  test_legacy_mbm.py  test_line_end_marker.py  test_local_density.py  test_local_density_window.py  test_localization_precision.py  test_log_window.py  test_magnetic_snap.py  test_method_text.py  test_mfxdta.py  test_min_enclosing.py  test_msr_alignment_quality.py  test_msr_alignment_used_beads.py  (+54 more)
tools/: compile_ui.py
