[tool.poetry]
name = "minflux-viewer"
version = "0.3.5"
description = "MINFLUX nanoscopy data viewer — Fiji-style desktop application with .msr import"
authors = ["Ziqiang Huang <ziqiang.huang@embl.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/EMBL-ICLM/minflux-viewer"
keywords = ["MINFLUX", "nanoscopy", "fluorescence", "microscopy", "bioimaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

# ---------------------------------------------------------------------------
# Core dependencies — all platforms
# ---------------------------------------------------------------------------

[tool.poetry.dependencies]
python    = ">=3.10,<3.13"
PyQt6     = ">=6.5"
numpy     = ">=1.24"
scipy     = ">=1.11"
pyqtgraph = ">=0.13"
matplotlib = ">=3.7"
PyOpenGL  = ">=3.1"
h5py      = ">=3.9"
zarr      = ">=2.17,<3.0"
tifffile  = ">=2024.2"
openpyxl  = ">=3.1"
psutil    = ">=5.9"
msr-reader = ">=0.2.1"   # pure-Python, cross-platform OBF/.msr reader

# ---------------------------------------------------------------------------
# .msr reading is fully cross-platform via msr-reader: MINFLUX localizations
# (early single-channel + modern multi-channel) are recovered from the embedded
# MFXDTA stacks. No Abberior specpy SDK / Imspector install is required.
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Development dependencies
# ---------------------------------------------------------------------------
roifile = "2025.5.10"

[tool.poetry.group.dev.dependencies]
pytest    = ">=7.4"
pytest-qt = ">=4.2"
ruff      = ">=0.4"
mypy      = ">=1.8"

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------

[tool.poetry.scripts]
minflux-viewer = "minflux_viewer.__main__:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_unused_ignores    = true

[tool.pytest.ini_options]
testpaths = ["tests"]
